--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,27 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "simple_terminal_banner"
-version = "0.0.2-alpha"
+version = "0.0.6"
 authors = [
-  { name="Stephen J. Graham", email="stephen@seesawweb.com" },
+    { name="Stephen J. Graham", email="stephen@seesawweb.com" },
 ]
-description = "Display a simple terminal banner."
+description = "A simple Python utility to display banners in the terminal"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = []
+
+[project.license]
+text = "MIT"
 
 [project.urls]
 Homepage = "https://github.com/charlbury/simple_terminal_banner"
+Repository = "https://github.com/charlbury/simple_terminal_banner"
 Issues = "https://github.com/charlbury/simple_terminal_banner/issues"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/simple_terminal_banner"]
