--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,10 +3,10 @@ name: Python package
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
